Started modal dropdown work for filters on map page. Fixed issues with trails not showing up in divider.

--- a/react-app/src/components/trail/TrailMap.scss
+++ b/react-app/src/components/trail/TrailMap.scss
@@ -29,6 +29,15 @@
 
     }
 
+    &__option {
+        position: relative;
+
+        &-popup {
+            position: relative;
+            top: 0;
+        }
+    }
+
     &__help {
         margin: 1rem;
     }
